# scrapy-requests-spider-closed

./: README.md  pyproject.toml
scrapy_requests_spider_closed/: __init__.py  main.py
